--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="fonas">
         <div class="saule"></div>
+        <div class="laivas"></div>
     </div>
 </body>
 </html>
