--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="fonas">
         <div class="saule"></div>
         <div class="laivas"></div>
+        <div class="croco1"></div>
+        <div class="croco2"></div>
+        <div class="croco3"></div>
     </div>
 </body>
 </html>
